Using default stream to list conversion